# mcpelauncher-elfinfo

./: CMakeLists.txt
include/mcpelauncher/: elf_reader.h  memory_region.h  minecraft_elf_info.h
lib/: memory_region.cpp
src/: main.cpp
